Added partial text entry

--- a/UI/app/src/main/res/values/strings.xml
+++ b/UI/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">UI</string>
+    <string name="app_name">Cars2Buses</string>
     <string name="title_activity_maps">Map</string>
 </resources>
